<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/AppTheme.ToolbarPrimary"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/AppTheme.TextExtraLight"
            android:layout_width="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_item_search"
        style="@style/AppTheme.CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/ly_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_search_flat" />

            <TextView
                style="@style/AppTheme.TextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/search_hint" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="45dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/AppTheme.TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_out"
                android:layout_marginStart="8dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                style="@style/AppTheme.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_prohibidos" />

                    <TextView
                        style="@style/AppTheme.TextContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/forbidden_list" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView3"
                style="@style/AppTheme.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_control" />

                    <TextView
                        style="@style/AppTheme.TextContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/antidoping_control" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView4"
                style="@style/AppTheme.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">


                <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_riesgos" />

                    <TextView
                        style="@style/AppTheme.TextContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/risks" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView5"
                style="@style/AppTheme.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_autorizacion" />

                    <TextView
                        style="@style/AppTheme.TextContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/aut" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                style="@style/AppTheme.TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/sources" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="70dp">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/AppTheme.CardView"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:src="@drawable/digemid"
                        android:layout_margin="4dp"
                        android:layout_height="match_parent" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/AppTheme.CardView"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_margin="4dp"
                        android:src="@drawable/conaddd"
                        android:layout_height="match_parent" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/AppTheme.CardView"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_margin="4dp"
                        android:src="@drawable/wada"
                        android:layout_height="match_parent" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>